fix to js lib ref

--- a/DP.TwinRinksHelper.Web/wwwroot/m/index.html
+++ b/DP.TwinRinksHelper.Web/wwwroot/m/index.html
@@ -68,7 +68,7 @@
     <script src="//unpkg.com/@babel/polyfill@latest/dist/polyfill.min.js"></script>
     <script src="//unpkg.com/vue@latest/dist/vue.min.js"></script>
     <script src="//unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.js"></script>
-    <script src="//unpkg.com/pulltorefreshjs/dist/pulltorefresh.js"></script>
+    <script src="//unpkg.com/pulltorefreshjs"></script>
     <script src="/m/js/iphone-overlay.js"></script>
     <script src="/m/mobileProgressiveApp.js"></script>
     <script type="text/javascript">
